@@ -3,6 +3,7 @@ VIEWTYPES - Add Square Wall Large
 MYPLAYLIST - Adapt side poster/cover depending on listitem dbtype
 SKINSETTINGS - Move Monochrome flags option to Colors menu
 HOME - Add focus bump when pressing up from submenu and categories widget disabled
+SKINSETTINGS/MISCELLANEOUS - Force extendedinfo to open when pressing info
 
 [B]0.9.24[/B]
 LEIA - VIDEOOSD - Subtitles button opens subtitles menu
